[metadata]
name = dj-paypal
version = 0.0.2
author_email = boughanm6@gmail.com
maintainer = brahim boughanm
maintainer_email = boughanm6@gmail.com
description = Django PayPal REST API Integration: Building a Secure and Reliable Payment Gateway
long_description = file:README.rst
license = MIT
keyword = django demo paypal
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
exclude =
    djpay/migrations